--- a/index.html
+++ b/index.html
@@ -6,7 +6,9 @@
     <title>MORECIVIL - Water & Civil Engineering Solutions</title>
     <meta name="description" content="Professional water and civil engineering services - Water delivery, civil construction, excavation and more." />
     <meta name="author" content="MORECIVIL" />
-    
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;700;900&family=Montserrat:wght@700;800;900&display=swap" rel="stylesheet">
     <!-- Fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
