--- a/index.html
+++ b/index.html
@@ -7,14 +7,13 @@
     <meta name="description" content="Adelaide water cartage, dust suppression, tank fills and civil works across South Australia." />
     <meta name="author" content="MORECIVIL" />
     <link rel="canonical" href="https://www.morecivil.au/" />
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link rel="preload" href="/more-civil-hero-image.svg" as="image" />
-    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;700;900&family=Montserrat:wght@700;800;900&display=swap" rel="stylesheet">
-    <!-- Fonts -->
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;700;900&family=Montserrat:wght@700;800;900&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link rel="preload" href="/more-civil-hero-image.svg" as="image" fetchpriority="high" />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;700;900&family=Montserrat:wght@700;800;900&display=swap"
+      rel="stylesheet"
+    />
 
     <meta property="og:title" content="MORECIVIL" />
     <meta property="og:description" content="Water delivery, dust suppression, tank fills and civil works in Adelaide." />
